@@ -26,6 +26,10 @@ Changes Since 0.14
   - Document rST syntax change: Tokens like ``:this:example:`` are now valid
     field list names (instead of ordinary text).
 
+* docutils/nodes.py
+
+  - `Text.rstrip` and `Text.lstrip` now handle `rawsource` attribute.
+  
 * docutils/parsers/rst/states.py:
 
   - Allow embedded colons in field list field names.
